transaction connect to gateway
